yume.css
/* ... */
html,
body,
* {
    font-family: var(--font-stack);
    box-sizing: border-box;
    color: var(--default-black);
}

html {
    scroll-behavior: smooth;
    font-size: 18px;
    line-height: 1.5;
}

body {
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    min-height: 100vh;
    overflow-x: hidden;
    max-width: 100vw;
}




/* ********************** | GENERAL | ********************** */
/* ********************** | GENERAL | ********************** */
a {
    color: rgb(83, 105, 145);
    font-weight: 600;
}
.link-style-none{
    text-decoration: none;
    color: var(--default-black);
}
a:visited {
    color: rgb(95, 60, 163);
    font-weight: 600;
}

p {
    margin: 1em 0;
}

hr {
    width: 100%;
    border: 1px solid black;
    opacity: .1;
}

img {
    max-inline-size: 100%;
    block-size: auto;
    display: block;
}

input{
    border: none;
    background-color: var(--gray-100);
    font-size: 1em;
    padding: .5em 1em;
}

/* Default border radius */
.container, .container-narrow, .container-full, article, section, button, .highlight {
    border-radius: var(--default-border-radius);
}

/* Headings */
h1, h2, h3, h4, h5, h6{
    font-weight: 600;
    letter-spacing: -.02em;
    line-height: 1.2em;
}
h1 + *, h2 + *, h3 + *, h4 + *, h5 + *, h6 + * {
    margin-top: 0;
}
h1{
    font-size: 4em;
    margin-bottom: .5em;
}
h2{
    font-size: 3em;
    margin-bottom: .5em;
}
h3{
    font-size: 2em;
    margin-bottom: .5em;
}
h4{
    font-size: 1.5em;
    margin-bottom: .375em;
}
h5{
    font-size: 1.25em;
    margin: 1.5em 0 .25em;
}
h6{
    font-size: 1em;
    margin: 1.5em 0 .25em;
}


/* ********************** | CUSTOM CLASSES | ********************** */
/* ********************** | CUSTOM CLASSES | ********************** */
.shadow {
    box-shadow: var(--drop-shadow);
}
.full-width{
    width: 100%;
}
.faded{
    opacity: .5;
}


/* ********************** | STYLES | ********************** */
/* ********************** | STYLES | ********************** */
.border-radius-0{
    border-radius: 0;
}
.border-radius-1{
    border-radius: .25em;
}
.border-radius-2{
    border-radius: .375em;
}
.border-radius-3{
    border-radius: .5em;
}
.border-radius-4{
    border-radius: .75em;
}
.border-radius-5{
    border-radius: 1em;
}
.border-radius-6{
    border-radius: 1.5em;
}
.border-radius-7{
    border-radius: 2em;
}
.border-radius-8{
    border-radius: 3em;
}
.border-radius-9{
    border-radius: 4em;
}
.border-radius-10{
    border-radius: 100em;
}

/* Images */
.width-10{
    max-width: 10%;
}
.width-20{
    max-width: 20%;
}
.width-30{
    max-width: 30%;
}
.width-40{
    max-width: 40%;
}
.width-50{
    max-width: 50%;
}
.width-60{
    max-width: 60%;
}
.width-70{
    max-width: 70%;
}
.width-80{
    max-width: 80%;
}
.width-90{
    max-width: 90%;
}
.width-100{
    max-width: 100%;
}

/* Heights */
.min-height-100{
    min-height: 100vh;
}

.img-xxs{
    max-width: 4em;
}
.img-xs{
    max-width: 8em;
}
.img-s{
    max-width: 12em;
}
.img-m{
    max-width: 18em;
}
.img-l{
    max-width: 28em;
}
.img-xl{
    max-width: 46em;
}
.img-xxl{
    max-width: 62em;
}

/* ********************** | TEXT | ********************** */
/* ********************** | TEXT | ********************** */
.logo {
    letter-spacing: .25em;
    font-weight: 600;
    color: var(--default-black);
    text-decoration: none;
}

mark {
    display: inline-block;
    line-height: 0em;
    padding-bottom: 0.5em;
    background-color: var(--yellow-300);
}

.logo:visited {
    color: var(--default-black);
}

.t-05 {
    font-size: .5em;
}

.t-075 {
    font-size: .75em;
}

.t-0875 {
    font-size: .875em;
}

.t-1 {
    font-size: 1em;
}

.t-1-25 {
    font-size: 1.25em;
}

.t-1-5 {
    font-size: 1.5em;
}

.t-2 {
    font-size: 2em;
}

.t-3 {
    font-size: 3em;
}

.t-4 {
    font-size: 4em;
}

.t-5 {
    font-size: 5em;
}

.t-thin, .t-100 {
    font-weight: 100;
}

.t-extra-light, .t-200 {
    font-weight: 200;
}

.t-light, .t-300 {
    font-weight: 300;
}

.t-regular, .t-400 {
    font-weight: 400;
}

.t-medium, .t-500 {
    font-weight: 500;
}

.t-semi-bold, .t-600 {
    font-weight: 600;
}

.t-bold, .t-700 {
    font-weight: 700;
}

.t-extra-bold, .t-800 {
    font-weight: 800;
}

.t-black, .t-900 {
    font-weight: 900;
}


.t-left {
    text-align: left;
}

.t-center {
    text-align: center;
}

.t-right {
    text-align: right;
}

.serif {
    font-family: var(--font-stack-serif);
}

.hyphens{
    hyphens: auto;
}

/* Block quote */
blockquote{
    font-size: 1.125em;
    width:65%;
    margin: 2em auto;
    font-style:italic;
    color: var(--gray-600);
    padding: 0 1.2em;
    border-left: 8px solid var(--gray-200);
    line-height: 1.6875em;
    position: relative;
}


/* ********************** | NAVIGATION | ********************** */
/* ********************** | NAVIGATION | ********************** */
nav {
    position: relative;
    z-index: 100;
    display: flex;
    justify-content: space-between;
    min-height: var(--nav-height);
    align-items: center;
    background-color: var(--nav-color);
}

nav img{
    max-height: 4em;
}

nav ul {
    display: flex;
    align-items: center;
    list-style: none;
    padding: 0;
    transition: transform 500ms;
}

nav ul li {
    padding: 0 var(--menu-gap);
    white-space: nowrap;
    margin: 0;
}

nav ul li a,
nav ul li a:visited,
nav a, nav a:visited {
    text-decoration: none;
    color: var(--nav-item-color);
    font-weight: var(--nav-weight);
    transition: opacity var(--hover-transition);
}

nav ul li a:hover {
    opacity: .5;
}


nav ul li:first-of-type {
    padding-left: 0;
}

nav ul li:last-of-type {
    padding-right: 0;
}

.sticky {
    position: sticky;
    top: 0;
}

/* Dropdown */
.dropdown {
    display: none;
    position: absolute;
    background-color: var(--nav-color);
}

nav ul li .dropdown li {
    padding: 10px;
    white-space: nowrap;
    margin: 0;
}
/* ... */

